--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "core-decorators": "^0.12.3",
     "firebase": "^3.6.1",
     "flexboxgrid": "^6.3.1",
-    "moment": "^2.15.1",
+    "html-webpack-template": "^5.4.1",
+    "lockr": "^0.8.4",
+    "moment": "^2.17.0",
     "mousetrap": "^1.6.0",
     "offline-js": "github:hubspot/offline",
     "react": "^15.4.0",
@@ -99,7 +101,9 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-table": "^3.1.2",
+    "reactable": "^0.14.1",
     "redux": "^3.5.2",
+    "redux-form": "^6.2.0",
     "redux-ignore": "^1.2.4",
     "redux-thunk": "^2.1.0",
     "redux-undo": "^1.0.0-beta9",
